--- a/kotlinTest/build.gradle
+++ b/kotlinTest/build.gradle
@@ -69,7 +69,7 @@ dependencies {
 	//----------------------------------Kafka----------------------------------------------
 	implementation 'org.springframework.kafka:spring-kafka'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
-	//implementation 'com.server:middleware:0.0.1-SNAPSHOT'
+
 	//-------------------------------------------------------------------------------------
 
 	// https://mvnrepository.com/artifact/com.google.guava/guava
@@ -77,7 +77,7 @@ dependencies {
 
 
 //----------------------------------liquibase----------------------------------------------
-	//implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.27.0'
+	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.27.0'
 //-----------------------------------------------------------------------------------------
 
 }
