--- a/kotlinTest/src/main/resources/application.properties
+++ b/kotlinTest/src/main/resources/application.properties
@@ -14,14 +14,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 #-------------------------------Kafka------------------------------------------
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
-#spring.kafka.producer.properties.spring.json.type.mapping=com.server.Store.Model.EmailSender ,com.com.server.kotlinTest.Model.EmailSender
-#spring.kafka.consumer.properties.spring.json.type.mapping=com.server.Store.Model.EmailSender , com.com.server.kotlinTest.Model.EmailSender
 #------------------------------------------------------------------------------
 
 #-------------------------------liquibase------------------------------------------
-spring.liquibase.change-log = classpath:/db/db-changelog-master.xml
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/db-changelog-master.yaml
 logging.level.liquibase = INFO
-spring.liquibase.default-schema = liquibase_db
+spring.liquibase.default-schema = DBA_J1
 
 
 
